switching to new main-*-test layout and to stdio streams

--- a/Makefile_sys_conf.inc
+++ b/Makefile_sys_conf.inc
@@ -1,3 +1,5 @@
+MAKE_DEBUG     = 1
+
 DEBUG          = -gdwarf-2
 WARNING        = -pedantic -Wall -Werror -Wstrict-prototypes
 PROGRAMMER     = jtagmkII
