some minor improvments and bug fixes

--- a/Makefile_m644_conf.inc
+++ b/Makefile_m644_conf.inc
@@ -14,7 +14,7 @@ override ASFLAGS	   = -mmcu=$(MCU_TARGET) -Wa,--gdwarf-2
 
 #PROGRAMMER     = avr911
 #PROG_PORT      = /dev/ttyUSB1
-PROGRAMMER     = usbasp
+PROGRAMMER     = avrispmkII
 PROG_PORT      = usb
 DEFS           = -D$(call uc, $(MCU_TARGET)) -DF_CPU=$(F_CPU)
 FLASHCMD       = avrdude -p $(MCU_TARGET) -P $(PROG_PORT) -c $(PROGRAMMER) -U flash:w:# no space at the end
