--- a/Makefile_sys_conf.inc
+++ b/Makefile_sys_conf.inc
@@ -24,7 +24,7 @@ SPEEDPREFIX    =
 SPEEDCMD       = performance
 SIZE_DIR       = size_log/$(BOARD_NAME)/#
 LIST_DIR       = listings/$(BOARD_NAME)/#
-LIST_OPT       = -Wa,-adhln -g
+LIST_OPT       = -Wa,-adghlms -g
 STAT_DIR       = stats/$(BOARD_NAME)/#
 CC	       = avr-gcc
 CSTD           = gnu99
